etc/tests/error/heap/rc-gc-conflict.ny
;; flags: --heap=rc -gc
;; expect: --heap=rc cannot be combined with -gc
print(1)
